compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__nested_pattern_with_labels.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "pub type Box(x) { Box(a: Int, b: x) }\nfn go(x) {\n  case x {\n    Box(a: _, b: Box(a: a, b: b)) -> a + b\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE
pub type Box(x) { Box(a: Int, b: x) }
fn go(x) {
  case x {
    Box(a: _, b: Box(a: a, b: b)) -> a + b
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Box extends $CustomType {
  constructor(a, b) {
    super();
    this.a = a;
    this.b = b;
  }
}

function go(x) {
  if (x instanceof Box && x.b instanceof Box) {
    let a = x.b.a;
    let b = x.b.b;
    return a + b;
  } else {
    return 1n;
  }
}
