compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__unqualified_imported_multiple_fields.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "import other.{Two}\npub fn main() {\n  Two(b: 2, c: 3, a: 1)\n}"
---
----- SOURCE CODE
import other.{Two}
pub fn main() {
  Two(b: 2, c: 3, a: 1)
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { Two } from "../other.mjs";

export function main() {
  return new Two(1n, 2n, 3n);
}
